# SelectionEarthquake

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: IssuesWorkflow.yml  deploy.yml  greetings.yml  python-tests-auto.yml  python-versions.yml  tests.yml
examples/: Basic01.ipynb  basic_usage.py
src/selection_service/: Config.py  ErrorHandle.py  Mappers.py  Pipeline.py  Providers.py  ResultHandle.py  Selection.py  __init__.py
src/selection_service/core/: AsyncPipeline.py  BasePipeline.py  Config.py  Pipeline.py  PipelineFactory.py  SyncPipeline.py
src/selection_service/data/: stations.xlsx
src/selection_service/enums/: Enums.py
src/selection_service/processing/: Mappers.py  Selection.py
src/selection_service/providers/: AfadProvider.py  AsyncProviders.py  BaseProviders.py  PeerProvider.py  ProviderFactory.py  Providers.py  SyncProviders.py  conftest.py
tests/: test_AfadProvider.py  test_PeerProvider.py  test_Providers.py  test_basic.py
