[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earthquake_selection"
version = "0.1.0"
description = "A library for earthquake selection"
readme = "README.md"
authors = [
    {name = "Muhammed Sural", email = "muhammedsural@gmail.com"}
]
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["earthquake", "seismology", "data-processing", "selection", "peer", "nga","afad"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scipy>=1.16.1",
    "requests>=2.32.5",
    "aiohttp>=3.12.15",
    "openpyxl>=3.1.5",
    "pyyaml>=6.0",        # Config dosyaları için
    "tqdm>=4.60.0",       # Progress bar için
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "isort>=5.10.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "twine>=4.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
Homepage        = "https://github.com/muhammedsural/SelectionEarthquake"
Documentation   = "https://muhammedsural.github.io/SelectionEarthquake"
Repository      = "https://github.com/muhammedsural/SelectionEarthquake"
Issues          = "https://github.com/muhammedsural/SelectionEarthquake/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|_build|buck-out|build|dist)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true